<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPage" >
     
     <Button
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:background="@drawable/button"
         android:onClick="goToMenu"
         android:text="@string/menu"
         android:textColor="#ffffff"
         android:textSize="22sp" 
         android:width="200dp"/>
    
     <Button
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:text="@string/favorites" 
        android:onClick="favoritesList"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="200dp"
         />
     <Button
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favorites"
        android:text="@string/balance" 
        android:onClick="checkBalance"         
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="200dp"
         />
     <Button
        android:id="@+id/dining_hall_info"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance"
        android:text="@string/dining_hall_info" 
        android:onClick="showInfo"
        android:textColor="#ffffff"
        android:textSize="22sp"        
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="200dp"
         />

</RelativeLayout>